# ha-dwd-precipitation

./: .gitignore  CLAUDE.md  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ha-compat.yml  hassfest.yaml  live.yml  release-delay.yml  release-drafter.yml  tests.yml  validate.yaml
custom_components/dwd_precipitation/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  dry_streak.py  entity.py  manifest.json  products.py  sensor.py  tests.py  utils.py
custom_components/dwd_precipitation/parser1/: __init__.py  radolan.py  util.py
custom_components/dwd_precipitation/radar/: LICENSE.txt  __init__.py  georef.py  io.py  nowcast.py  odim.py  util.py
custom_components/dwd_precipitation/translations/: en.json
scripts/: check_release_delay.py  create_fixture.py
tests/: README.md  conftest.py  test_config_flow.py  test_e2e.py  test_integration.py  test_odim.py  test_parser.py  test_wradlib.py
tests/factories/: odim.py
tests/fixtures/: composite_rs_sample.hd5  fixture_metadata.json  radolan_metadata.json  radolan_rw_sample.bin.bz2  radolan_sf_sample.bin.bz2
tests/integration/: test_binary_sensor.py  test_config_flow.py  test_coordinator_timing.py  test_products.py  test_release_delay.py  test_sensor.py  test_setup_entry.py
tests/live/: test_live_download.py
tests/parser/: test_georef.py  test_nowcast.py  test_odim.py  test_radolan.py  test_utils.py
tests/reference/: test_wradlib_odim.py  test_wradlib_radolan.py
