[project]
name = "ha-dwd-precipitation"
version = "2026.5.1"
requires-python = ">=3.14.2"

[tool.uv]
package = false  # not a distributable Python package; test in-place via pythonpath

[dependency-groups]
# Minimal deps for parser + live tests — no HA, no wradlib.
# numpy/aiohttp are pulled so radar/* and utils.py import without HA installed.
unit-test = [
    "pytest",
    "numpy",
    "h5py",
    "requests",
    "aiohttp",
]
# Installs only HA-compatible packages — validates the component runs in the
# same environment HA uses (same Python version, same numpy/h5py pins).
ha-test = [
    "pytest-homeassistant-custom-component==0.13.336",
    "h5py",
]
# Installs wradlib (+ pyproj, scipy, etc.) for parser comparison tests.
# Kept separate because wradlib's heavy deps are not part of the HA ecosystem.
wradlib-comparison = [
    "wradlib",
    "pytest",
    "requests",
    "h5py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "." allows `from custom_components... import` (used in ha-test job, where HA is installed).
# "custom_components/dwd_precipitation" allows `from radar.odim import` without triggering
# the HA-importing custom_components/dwd_precipitation/__init__.py (used in wradlib job).
pythonpath = [".", "custom_components/dwd_precipitation"]
asyncio_mode = "auto"
markers = [
    "live: requires network access to DWD OpenData (scheduled, not on PRs)",
    "wradlib: requires wradlib installed",
    "asyncio: async test (pytest-asyncio; redundant under asyncio_mode=auto)",
]
